--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,6 +49,18 @@ html , body{
     height: 72px;
     border: none;
     background-color: #E7E7E7;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 17px;
+}
+
+.answer-box:nth-of-type(1){
+    background-color: #84CCF3 !important;
+    color: white !important;
+}
+
+.answer-box:focus{
+    font-size: 40px;
 }
 
 .add{
@@ -62,12 +74,52 @@ html , body{
     font-size: 21px;
     color: white;
     border-radius: 10px;
-    display: inline-block;
+    /* display: inline-block; */
     box-shadow: rgba(0, 0, 0, 0.16) 0 3px 5px;
+    z-index: 2;
+    position: absolute;
+    bottom: 400px;
+    right:52.9px;
 }
 
 input[type="button"]:focus {
     outline: none;
+}
+
+input[type="number"]:focus {
+    outline: none;
+}
+
+/* For Firefox */
+
+input[type='number'] {
+    -moz-appearance: textfield;
+    resize: none;
+}
+
+/* Webkit browsers like Safari and Chrome */
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+#timeBoxLabel{
+    margin-top: 44px;
+    margin-right: 11px;
+    font-size: 24px;
+}
+
+#timeBox {
+    border: none;
+    text-align: center;
+    width: 89px;
+    height: 74px;
+    display: inline-block;
+    font-size: 56.46px;
+    color: #535353;
+    background-color: #f6f6f6;
 }
 
 .add:active{
