Done . Nanti sambung

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,8 @@
  
   <body>
  
+    {% block overlay %}
+    {% endblock %}
     <div class="container container-fluid">
       {% block content %} <!--- Our content will be here -->
       {% endblock %}
