--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -149,3 +149,27 @@ input[type=number]::-webkit-outer-spin-button {
 #falseAnswerBox {
     margin-left: 5px;
 }
+
+
+/****************************************************
+
+                    SIDEBAR
+
+****************************************************/
+
+.overlay{
+    width : 100%;
+    height :100%;
+    background-color: rgba(0, 0, 0, 0.55);
+    z-index: 2;
+    position: absolute;
+}
+
+.sidebar{
+    width:768px;
+    height: 100%;
+    overflow-y: auto;
+    background-color: #fff;
+    z-index: 3;
+    position: absolute;
+}
