--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -173,3 +173,67 @@ input[type=number]::-webkit-outer-spin-button {
     z-index: 3;
     position: absolute;
 }
+
+.title{
+    font-family: 'Josefin Sans' , sans-serif;
+    font-size: 56.46px;
+    display: inline;
+}
+
+.all-question {
+    margin: 24px 38px;
+}
+
+.questionBox{
+    width: 100%;
+    height : 177px;
+    margin-bottom: 9px;
+}
+
+.list{
+    font-size: 24px;
+    width : 100%;
+    height: auto;
+    border: none;
+}
+
+.delete{
+    font-family: 'Josefin Sans' , sans-serif;
+    font-size: 18px;
+    color:#9E9E9E;
+    border:none;
+    background-color: rgba(255,255,255,1);
+    margin-bottom:18px;
+}
+
+.update{
+    font-family: 'Josefin Sans' , sans-serif;
+    font-size: 18px;
+    color:#5CB9EB;
+    float: right;
+    border:none;
+    background-color: rgba(255,255,255,1);
+    margin-bottom:18px;
+}
+
+ol{
+    list-style: none;
+}
+
+.answer-box-edit {
+    display: inline-block;
+    width: 115px;
+    height: 55px;
+    border: none;
+    background-color: #E7E7E7;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 31.92px;
+    font-family: 'Josefin Sans' , sans-serif;
+    margin-bottom: 25px;
+}
+
+.answer-box-edit:nth-of-type(1){
+    background-color: #84CCF3;
+    color: white;
+}
