--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,6 @@
     <title>
       {% block title %} {% endblock %} <!-- we'll change the title -->
     </title>
- 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <!-- Fonts -->
@@ -23,6 +22,9 @@
  
     {% block overlay %}
     {% endblock %}
+    <div class="see-questions" onclick="openBox()">
+      <p class="text-question" style="margin : 0;">See Questions</p>
+    </div>
     <div class="container container-fluid">
       {% block content %} <!--- Our content will be here -->
       {% endblock %}
