--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -129,6 +129,13 @@ input[type=number]::-webkit-outer-spin-button {
     font-family: 'Josefin Sans',sans-serif;
 }
 
+#timeBoxLabelEdit{
+    margin-top: 14px;
+    margin-right: 11px;
+    font-size: 24px;
+    font-family: 'Josefin Sans',sans-serif;
+}
+
 #timeBox {
     border: none;
     text-align: center;
@@ -202,7 +209,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .questionBox{
     width: 100%;
-    height : 177px;
+    height : auto;
     margin-bottom: 9px;
 }
 
@@ -211,6 +218,7 @@ input[type=number]::-webkit-outer-spin-button {
     width : 100%;
     height: auto;
     border: none;
+    margin-bottom: 15px;
 }
 
 .delete{
