Adjust files and Do routing

--- a/views/templates/base.html
+++ b/views/templates/base.html
@@ -18,7 +18,7 @@
     {% endblock %}
   </head>
  
-  <body>
+  <body class="create">
  
     {% block overlay %}
     {% endblock %}
@@ -34,7 +34,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
-    <script src="nunjucks.js"></script>
     {% block script %}
 
     {% endblock %}
