--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,8 +9,11 @@ h1{
     margin-bottom: 24.4px;
 }
 
+body.create{
+    background-color: #5CB9EB;    
+}
+
 html , body{
-    background-color: #5CB9EB;
     width: 100%;
     height: 100%;
     font-family: 'Josefin Sans' , sans-serif;
