--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -5,7 +5,7 @@ p{
 h1{
     font-size: 35px;
     color: #2E2E2E;
-    font-family: 'Josefin Slab', serif;
+    font-family: 'Baumans',cursive;
     margin-bottom: 24.4px;
 }
 
@@ -16,7 +16,7 @@ body.create{
 html , body{
     width: 100%;
     height: 100%;
-    font-family: 'Josefin Sans' , sans-serif;
+    font-family: 'Baumans',cursive;
 }
 
 .parent-box {
@@ -129,14 +129,14 @@ input[type=number]::-webkit-outer-spin-button {
     margin-top: 44px;
     margin-right: 11px;
     font-size: 24px;
-    font-family: 'Josefin Sans',sans-serif;
+    font-family: 'Baumans',cursive;
 }
 
 #timeBoxLabelEdit{
     margin-top: 14px;
     margin-right: 11px;
     font-size: 24px;
-    font-family: 'Josefin Sans',sans-serif;
+    font-family: 'Baumans',cursive;
 }
 
 #timeBox {
@@ -201,7 +201,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .title{
-    font-family: 'Josefin Sans' , sans-serif;
+    font-family: 'Baumans',cursive;
     font-size: 56.46px;
     display: inline;
 }
@@ -225,7 +225,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .delete{
-    font-family: 'Josefin Sans' , sans-serif;
+    font-family: 'Baumans',cursive;
     font-size: 18px;
     color:#9E9E9E;
     border:none;
@@ -234,7 +234,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .update{
-    font-family: 'Josefin Sans' , sans-serif;
+    font-family: 'Baumans',cursive;
     font-size: 18px;
     color:#5CB9EB;
     float: right;
@@ -256,7 +256,7 @@ ol{
     border-radius: 50px;
     text-align: center;
     font-size: 31.92px;
-    font-family: 'Josefin Sans' , sans-serif;
+    font-family: 'Baumans',cursive;
     margin-bottom: 25px;
 }
 
