Nak buad user je

--- a/views/templates/baseinput.html
+++ b/views/templates/baseinput.html
@@ -17,13 +17,8 @@
     {% endblock %}
   </head>
  
-  <body class="create">
+  <body>
  
-    {% block overlay %}
-    {% endblock %}
-    <div class="see-questions" onclick="openBox()">
-      <p class="text-question" style="margin : 0;">See Questions</p>
-    </div>
     <div class="container container-fluid">
       {% block content %} <!--- Our content will be here -->
       {% endblock %}
