Done Express Cookies. Much easier with cookies !

--- a/views/pages/character.html
+++ b/views/pages/character.html
@@ -11,8 +11,7 @@ Character choose
 
 {% block content %}
 <div class="row">
-    Wow, you did it !
-    {{ from }}
+    Wow, you did it ! Welcome <p id="welcome" onload="checkCookie"></p>
 </div>
 {% endblock %}
 
