--- a/views/templates/baseinput.html
+++ b/views/templates/baseinput.html
@@ -17,9 +17,9 @@
     {% endblock %}
   </head>
  
-  <body>
+  <body onload="checkCookie()">
  
-    <div class="container container-fluid">
+    <div class="container-fluid">
       {% block content %} <!--- Our content will be here -->
       {% endblock %}
     </div>
