Done styling Input Page and Cookies

--- a/views/templates/baseinput.html
+++ b/views/templates/baseinput.html
@@ -17,7 +17,7 @@
     {% endblock %}
   </head>
  
-  <body onload="checkCookie()">
+  <body onload="checkCookie()" id="bodyInput">
  
     <div class="container-fluid">
       {% block content %} <!--- Our content will be here -->
