--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -407,3 +407,72 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
     background: #F0F0F0;
 }
+
+
+
+/* Extra small devices (phones, 600px and down) */
+
+@media only screen and (min-width: 320px) {
+    #bodyInput{
+        background: #001c7a;
+        /* Old browsers */
+
+        background: -moz-linear-gradient(top, #001c7a 0%, #a70024 100%);
+        /* FF3.6-15 */
+
+        background: -webkit-linear-gradient(top, #001c7a 0%, #a70024 100%);
+        /* Chrome10-25,Safari5.1-6 */
+
+        background: linear-gradient(to bottom, #001c7a 0%, #a70024 100%);
+        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001c7a', endColorstr='#a70024', GradientType=0);
+        /* IE6-9 */
+
+
+    }
+
+    div#formInput{
+        text-align: center;
+        vertical-align: middle;
+        margin: 0 auto;
+        display: block;
+        position: absolute;
+        max-width: 100%;
+        width : 100%;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    label{
+        font-family: 'Baumans' , cursive;
+        color : white;
+    }
+
+    input[type=submit]#nameSubmit {
+        border: solid 1px white;
+        background: none;
+        color : white;
+        padding: 11px 26px;
+        margin-top : 29px;
+    }
+
+    input[type=text]#from{
+        padding : 0 20px 0 20px;
+        width: 100%;
+        height: 44px;
+        border-radius: 5px;
+        border:none;
+    }
+
+    a.fetchUser{
+        position: relative;
+        bottom: -140px;
+        font-family: 'Baumans' , cursive;
+        font-size: 14px;
+        text-align: center;
+        margin: 0 auto;
+        color:white;
+    }
+
+}
