--- a/views/pages/input.html
+++ b/views/pages/input.html
@@ -11,11 +11,13 @@ Username
 
 {% block content %}
 <div class="row" id="input">
-    <form action="api/app/user/input" method="post">
-    <label for="from">Your name :</label>
-        <input type="text" name="from" id="from">
-        <input type="submit" value="Send" id="nameSubmit">
-    </form>
+    <div id="formInput">
+        <form action="api/app/user/input" method="post" style="margin-left:17px; margin-right:18px;">
+        <label for="from">Your name :</label><br>
+            <input type="text" name="from" id="from"><br>
+            <input type="submit" value="Send" id="nameSubmit">
+        </form>
+    </div>
 </div>
 {% endblock %}
 
