--- a/views/pages/character.html
+++ b/views/pages/character.html
@@ -1,4 +1,4 @@
-{% extends "./../templates/baseinput.html" %}
+{% extends "./../templates/baseplay.html" %}
 
 {% block css %}
 <!-- inject:css -->
@@ -10,9 +10,7 @@ Character choose
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    Wow, you did it ! Welcome <p id="welcome" onload="checkCookie"></p>
-</div>
+<div class="append"></div>
 {% endblock %}
 
 {% block script %}
