--- a/views/templates/baseplay.html
+++ b/views/templates/baseplay.html
@@ -8,39 +8,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>
-        
-Character choose
-
+        {% block title %} {% endblock %}
     </title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Baumans" rel="stylesheet"> 
-<!-- inject:css -->
-<link rel="stylesheet" href="../css/pagination.css">
-<link rel="stylesheet" href="../css/styles.css">
-<!-- endinject -->
-
+    <link href="https://fonts.googleapis.com/css?family=Baumans" rel="stylesheet"> {% block css %} {% endblock %}
 </head>
 
 <body onload="gameStarted(1)" id="bodyInput">
 
     <div class="container-fluid">
-        
-<div class="append"></div>
-
+        {% block content %}
+        <!--- Our content will be here -->
+        {% endblock %}
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
-<!-- inject:js -->
-<script src="../js/jquery/jquery-3.3.1.min.js"></script>
-<script src="../js/nunjucks/nunjucks.min.js"></script>
-<script src="../js/index.js"></script>
-<!-- endinject -->
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> {% block script %} {% endblock %}
 </body>
 
 </html>
