--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -481,4 +481,48 @@ input[type=range]:focus::-ms-fill-upper {
         position: relative;
         display: block;
     }
+
+    #countdown {
+        position: relative;
+        margin: auto;
+        margin-top: 100px;
+        height: 40px;
+        width: 40px;
+        text-align: center;
+    }
+
+    #countdown-number {
+        color: white;
+        display: inline-block;
+        line-height: 40px;
+    }
+
+    svg {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 150px;
+        height: 255px;
+        transform: rotateY(-180deg) rotateZ(-90deg);
+    }
+    circle {
+        stroke-dasharray: 426px;
+        stroke-dashoffset: 0px;
+        stroke-linecap: round;
+        stroke-width: 4px;
+        stroke: white;
+        fill: none;
+    }
+
+    .circle{
+
+    }
+    @keyframes countdown {
+        from {
+            stroke-dashoffset: 0px;
+        }
+        to {
+            stroke-dashoffset: 426px;
+        }
+    }
 }
