--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -495,14 +495,18 @@ input[type=range]:focus::-ms-fill-upper {
         color: white;
         display: inline-block;
         line-height: 40px;
+        font-size: 58.26px;
+        font-family: 'baumans',cursive;
+        position: relative;
+        right: 5px;
     }
 
     svg {
         position: absolute;
-        top: 0;
-        right: 0;
-        width: 150px;
-        height: 255px;
+        top: -111px;
+        right: -10px;
+        width: 152px;
+        height: 261px;
         transform: rotateY(-180deg) rotateZ(-90deg);
     }
     circle {
@@ -517,6 +521,41 @@ input[type=range]:focus::-ms-fill-upper {
     .circle{
 
     }
+
+    .input-area{
+        top: calc(200px);
+        position: absolute;
+        width: 100%;
+        padding-left: 19px;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+
+    .question-display{
+        position: relative;
+        margin: 0 auto;
+        width: 100%;
+        text-align: center;
+        top: 100px;
+        font-size: 14px;
+        color: white;
+    }
+
+    .input-area input[type=submit]{
+        width: 45%;
+        height: 140px;
+        display: inline-block;
+        margin-right: 14px;
+        margin-bottom: 14px;
+        background-color: #2A2A2A;
+        border: none;
+        color: white;
+        font-size: 32.94px;
+        font-family: 'Baumans',cursive;
+        border-radius: 5px;
+    }
+
     @keyframes countdown {
         from {
             stroke-dashoffset: 0px;
