Countdown auto send and new question available

--- a/views/templates/baseplay.html
+++ b/views/templates/baseplay.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Baumans" rel="stylesheet"> {% block css %} {% endblock %}
 </head>
 
-<body onload="gameStarted(1)" id="bodyInput">
+<body id="bodyInput">
 
     <div class="container-fluid">
         {% block content %}
