--- a/views/templates/baseapp.html
+++ b/views/templates/baseapp.html
@@ -18,6 +18,8 @@
         {% block main %}
         {% endblock %}
     </div>
+
+    <script src="/socket.io/socket.io.js"></script>
     {% block script %}
     {% endblock %}
 
