--- a/views/templates/baseplay.html
+++ b/views/templates/baseplay.html
@@ -27,7 +27,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> {% block script %} {% endblock %}
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
+    <script src="/socket.io/socket.io.js"></script>
+    {% block script %} {% endblock %}
 </body>
 
 </html>
