--- a/views/pages/character.html
+++ b/views/pages/character.html
@@ -10,7 +10,14 @@ Character choose
 {% endblock %}
 
 {% block content %}
+<button id='chat' class='chat'>Chat</button>
 <div class="append"></div>
+<div id="chatbox">
+    <div id="close" class="close">
+        <i class="glyphicon glyphicon-remove remove-icon"></i>
+        <p class="close-chat">Close</p>
+    </div>
+</div>
 {% endblock %}
 
 {% block script %}
