--- a/views/templates/baseplay.html
+++ b/views/templates/baseplay.html
@@ -13,7 +13,9 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Baumans" rel="stylesheet"> {% block css %} {% endblock %}
+    <link href="https://fonts.googleapis.com/css?family=Baumans" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+    {% block css %} {% endblock %}
 </head>
 
 <body id="bodyInput">
