--- a/views/pages/character.html
+++ b/views/pages/character.html
@@ -11,6 +11,7 @@ Character choose
 
 {% block content %}
 <button id='chat' class='chat'>Chat</button>
+<button id='ranking' class='ranking'>Ranks</button>
 <div class="append"></div>
 <div id="chatbox">
     <div id="close-chat" class="close-chat">
