--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -671,7 +671,6 @@ input[type=range]:focus::-ms-fill-upper {
         background-color: rgba(94, 94, 94, 0.45);
         padding: 10px;
         border-radius: 5px;
-        margin-bottom: 20px;
         width: auto;
         text-align: left;
         clear: both;
@@ -685,8 +684,12 @@ input[type=range]:focus::-ms-fill-upper {
         padding: 10px;
         background: rgba(94, 94, 94, 0.45);
         border-radius: 5px;
-        margin-bottom: 20px;
         max-width: 58%;
+    }
+
+    .time{
+        font-size: 12px;
+        margin-bottom: 20px;
     }
 
     .close-chat{
@@ -694,11 +697,13 @@ input[type=range]:focus::-ms-fill-upper {
         color: white;
         margin-top: 9px;
         padding-left: 18px;
+        cursor: pointer;
     }
 
     .close-text-chat{
         margin-left: 7px;
         display: inline;
+        cursor: pointer;
     }
 
     @keyframes countdown {
