--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -596,6 +596,51 @@ input[type=range]:focus::-ms-fill-upper {
         width: 0;
         height : 100%;
     }
+    }
+
+    #rankbox{
+        display: none;
+        overflow:none;
+        position: relative;
+        width: 0;
+        height : 100%;
+    }
+
+    /*         ALL TABLES           */
+    table.blueTable {
+        width: 100%;
+        height: 100px;
+        text-align: center;
+        border-collapse: collapse;
+        margin-top: 20px;
+    }
+
+    table.blueTable td,
+    table.blueTable th {
+        padding: 5px 2px;
+    }
+
+    table.blueTable tbody td {
+        font-size: 14px;
+        color: #FFFFFF;
+    }
+
+    table.blueTable thead {
+        border-bottom: 2px solid #FFFFFF;
+    }
+
+    table.blueTable thead th {
+        font-size: 15px;
+        font-weight: bold;
+        color: #FFFFFF;
+        text-align: center;
+    }
+
+    table.blueTable tfoot td {
+        font-size: 14px;
+    }
+
+    /*         END TABLES           */
 
     .chat{
         z-index: 2;
