--- a/views/pages/input.html
+++ b/views/pages/input.html
@@ -12,7 +12,7 @@ Username
 {% block content %}
 <div class="row" id="input">
     <div id="formInput">
-        <form action="api/app/user/input" method="post" style="margin-left:17px; margin-right:18px;">
+        <form action="api/app/user/input" method="post" id='inputSend' style="margin-left:17px; margin-right:18px;">
         <label for="from">Your name :</label><br>
             <input type="text" name="from" id="from"><br>
             <input type="submit" value="Send" id="nameSubmit">
