Done optimizing and fix bugs

--- a/views/pages/main.html
+++ b/views/pages/main.html
@@ -25,7 +25,7 @@ Character choose
     </form>
 </div>
 <div id="rankbox">
-    <div id="close-chat" class="close-chat">
+    <div id="rank-chat" class="rank-chat">
        <i class="fas fa-arrow-left"></i>
         <p class="close-text-chat">Close</p>
     </div>
