--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -745,6 +745,14 @@ input[type=range]:focus::-ms-fill-upper {
         cursor: pointer;
     }
 
+    .rank-chat{
+        width: 100%;
+        color: white;
+        margin-top: 9px;
+        padding-left: 18px;
+        cursor: pointer;
+    }
+
     .close-text-chat{
         margin-left: 7px;
         display: inline;
