Adjust Title of page

--- a/views/pages/create.html
+++ b/views/pages/create.html
@@ -1,7 +1,7 @@
 <!-- index.html -->
 {% extends "./../templates/base.html" %} <!-- we're extending the base template -->
  
-{% block title %}This is the new title of our webpage{% endblock %}
+{% block title %}CGC Content Management System{% endblock %}
 
     {% block css %}
     <!-- inject:css -->
