New LOTTIE FILES ! Cool ! But have to configure animations again

--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -500,7 +500,7 @@ input[type=range]:focus::-ms-fill-upper {
         right: 5px;
     }
 
-    svg {
+    svg#circleSvg {
         position: absolute;
         top: -111px;
         right: -10px;
