--- a/views/create.html
+++ b/views/create.html
@@ -77,6 +77,7 @@
 <script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/nunjucks/nunjucks.min.js"></script>
 <script src="../js/index.js"></script>
+<script src="../js/lottie/lottie.js"></script>
 <!-- endinject -->
 
   </body>
