--- a/views/input.html
+++ b/views/input.html
@@ -49,6 +49,7 @@ Enter Name (CGC)
 <script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/nunjucks/nunjucks.min.js"></script>
 <script src="../js/index.js"></script>
+<script src="../js/lottie/lottie.js"></script>
 <!-- endinject -->
 
   </body>
