--- a/views/main.html
+++ b/views/main.html
@@ -69,10 +69,12 @@ Let's Play
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
     <script src="/socket.io/socket.io.js"></script>
     
+    
 <!-- inject:js -->
 <script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/nunjucks/nunjucks.min.js"></script>
 <script src="../js/index.js"></script>
+<script src="../js/lottie/lottie.js"></script>
 <!-- endinject -->
 
 </body>
