--- a/views/templates/baseplay.html
+++ b/views/templates/baseplay.html
@@ -31,6 +31,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
     <script src="/socket.io/socket.io.js"></script>
+    {# <script src="./../js/jsonanimation/dataTrue.json"></script> #}
     {% block script %} {% endblock %}
 </body>
 
