--- a/views/pages/input.html
+++ b/views/pages/input.html
@@ -10,13 +10,15 @@ Enter Name (CGC)
 {% endblock %}
 
 {% block content %}
-<div class="row" id="input">
-    <div id="formInput">
-        <form action="api/app/user/input" autocomplete='off' method="post" id='inputSend' style="margin-left:17px; margin-right:18px;">
-        <label for="from">Your name :</label><br>
-            <input type="text" name="from" id="from"><br>
-            <input type="submit" value="Send" id="nameSubmit">
-        </form>
+<div id="barba-wrapper">
+    <div class="row barba-container" id="input">
+        <div id="formInput">
+            <form action='api/app/user/input' autocomplete='off' method="POST" id='inputSend' style="margin-left:17px; margin-right:18px;">
+            <label for="from">Your name :</label><br>
+                <input type="text" name="from" id="from"><br>
+                <input type="submit" value="Send" id="nameSubmit">
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
